# dust-modelling

./: .gitignore  README.md  pyproject.toml
io/: extract_ir_emission_flux.py  extract_quadrants_ir_data.py  get_col_density_sfd.py  read_green_map_remote.py
models/: fit_draine_model_to_star_inverse_square.py  model_ir_emission_astrodust.py  single_scatter.py  star_model.py
src/: bin_observed_data.py  castelli-flux-at-distance.py  convert_ebv_to_density.py  convert_galactic_coord_to_angle.py  convert_galactic_to_galactocentric.py  extract_ir_emission_flux.py  extract_observed_data.py  extract_quadrants_ir_data.py  find_chi_square_for_param_grid.py  fit_astrodust_model_to_star_inverse_square.py  get_col_density_sfd.py  get_galex_hlsp_data.py  model_ir_emission_astrodust.py  plot_binned_data.py  plot_coordinates.py  plot_inverse_square_euv.py  plot_observed_ir_data_quadrants.py  plot_scattered_flux.py  plot_spectrum.py  read_castelli.py  read_green_map_remote.py  single_scatter.py  spatial_analysis.py  split_uv_data_quadrants.py  star_model.py  utils.py
tests/: test_model_ir_emission_astrodust.py
utils/: bin_observed_data.py  castelli-flux-at-distance.py  convert_ebv_to_density.py  convert_galactic_coord_to_angle.py  convert_galactic_to_galactocentric.py
visualization/: plot_coordinates.py  plot_gl_gb.py  plot_integrated_reddening.py  plot_iue_observed_data_spica.py  plot_model_ir_flux.py  plot_observed_ir_data.py  plot_observed_uv_data_quadrants.py
