[tool.poetry]
name = "dust-modeling"
version = "0.0.1"
description = "A Python package to help Astrophysicists model interstellar and cosmic dust."
authors = ["Karan Kinariwala"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
astropy = "^5.3.4"
dustmaps = "^1.0.12"
pyyaml = "^6.0.1"
matplotlib = "^3.8.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
